[project]
name = "banner_DONGUK777"
version = "0.2.0"
description = "Banner Output Program"
authors = [
    {name = "DONGUK777", email = "kimdongyork@gmail.com"},
]
dependencies = [
    "pyfiglet>=1.0.2",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[project.script]
show-banner = 'banner_DONGUK777.banner:show'


[tool.pdm]
distribution = true
